# TrackCraft

./: .gitattributes  .gitconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .spotipy_cache  README.md  Setlist.py  access.py  analysis.py  analyze_tracks.py  api.py  core.yml  environment.yml  load_tracks.py  pyproject.toml  requirements.txt  setlist_gen.py  setup.cfg  spoti.py  trackcraft.py  trackcraft.yml  trackcraft_bakup.py
.github/: copilot-instructions.md
UtilityScripts/: Platform.py  platforms.csv
outputs/: df0.csv  df0.txt  df1.csv  output.xlsx
patches/: trackcraft_latest.patch
