[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

##########################
# Specific
##########################
[project]
name = "trackcraft"
version = "0.8.0"
description = "Audio tracks analyzer"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "All rights reserved" }
authors = [{ name = "Gokhan Ileri" }]
urls = { Homepage = "https://github.com/agokhanileri/trackcraft" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X"
]
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "spotipy",            # needed to capture popularity at least
  "fastapi",            # fine to omit pin if env is locked elsewhere
  "uvicorn",            # for docker
# "httpx"               # or use "requests" (pick one)
# "python-multipart"    # add only if you accept file uploads
# "pydantic"            # optional explicit pin if you want control
# "openai"              # needed to sort at least
]

[project.optional-dependencies]
dev = ["black", "ruff", "mypy", "pytest", "pre-commit", "ipython"]
audio = ["librosa", "pysoundfile", "mutagen", "tinytag"]
ml = ["scikit-learn", "xgboost"]
api = ["fastapi",  "requests", "pydantic", "httpx",  "openai"]
api-dev = ["uvicorn[standard]>=0.30,<1"]
server-uvicorn = ["uvicorn[standard]>=0.30,<1"]
server-gunicorn = ["gunicorn>=21,<22", "uvicorn[standard]>=0.30,<1"]
lambda-mangum = ["mangum>=0.17,<1"]
lambda-ric    = ["awslambdaric>=2,<3"]  # for zip-based Python runtime

# Explicit package discovery (adjust if you use src/ layout)
[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]


##########################
# General
##########################
[tool.black]
line-length = 99
target-version = ["py312"]
skip-string-normalization = false

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle (PEP 8 checks)
  "F",        # pyflakes
  "I",        # import sorting (isort)
  "UP",       # pyupgrade
  "SIM",      # simplify
  "N",        # naming
  "B",        # bugbear
  "C4",       # comprehensions
  "TID",      # tidy imports
]
ignore = [
  "T201",     # print() occurrences
  "D103",     # missing function docstrings --> for compactness
  "D107",     # missing class docstrings --> //
  "B018",     # unused loop vars --> for clarity (need manual check for big loops)
  "N802",     # camelCase not allowed --> allow for LC
  "PLR1702",  # combine if branches sharing the same body --> for clarity
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["trackcraft"]

[tool.pydocstyle]
ignore = ["D100", "D101", "D102", "D103", "D107"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest]
addopts = "-q"
testpaths = ["tests"]
