[metadata]
name = pythoncraft
version = 0.8.0
author = AGI
description = Python learning path
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/agokhanileri/pythoncraft
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X

[options]
packages = find:
python_requires = >=3.12
install_requires =
    numpy
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev =
    black
    ruff
    mypy
    pytest
    pre-commit
    ipython

# --- Tool configs that comfortably live in setup.cfg ---
[tool:pytest]
addopts = -q
testpaths = tests

[mypy]
python_version = 3.12
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = false
